# uWebSockets

./: CMakeLists.txt  main.cpp
app/include/: CharCoding.h  SafeMap.h
app/include/ManagerAPI/: MT4ManagerAPI.h
app/mt4Tick/: CMakeLists.txt
app/mt4Tick/src/: tick_client.cpp  tick_gateway.cpp  tick_recorder.cpp
app/mt4_tick/: CMakeLists.txt  Common.h  MT4Manager.cpp  MT4Manager.h  MTManager.h  MTTradeData.h  MangerAPI.cpp  MangerAPI.h  Models.h  Platform.h  main_quote-point.cpp  main_quote-publish.cpp  main_quote.cpp
app/tick_client/: CMakeLists.txt  tick_client.cpp
app/tick_gateway/: CMakeLists.txt  tick_gateway.cpp
app/tick_recorder/: CMakeLists.txt  tick_recorder.cpp
app/tick_server/: CMakeLists.txt  tick_server.cpp
